--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "typescript": "^1.8.9"
   },
   "dependencies": {
-    "doctrine": "^0.7.2",
-    "tslint": "^3.6.0"
+    "doctrine": "^0.7.2"
+  },
+  "peerDependencies": {
+    "tslint": "next"
   }
 }
